--- a/style.css
+++ b/style.css
@@ -76,6 +76,21 @@ a:active {
   width: 600px;
 }
 
+
+#content a:link {
+background-color: white;
+  color: #20b;
+  font-size: 14px;
+  font-style: normal;
+  font-family: helvetica;
+  font-weight: normal;
+  text-decoration: none;	
+	
+}
+
+
+
+
 @media only screen and (max-width: 600px)  {
  #content {
 	 width: 90%;
